--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
 <div class="grid gap-7 m-5 p-5 grid-cols-3 items-start">
     <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportAlexis.html" class="no-underline flex flex-col max-h-full" target="_blank">
-            <div class="aspect-video bg-white flex flex-initial justify-center flex-col rounded-xl p-1 w-full h-auto">
-                <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Alexis.png"
-                     alt="Graph">
+            <div>
+                <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
+                    <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Alexis.png"
+                        alt="Graph">
+                </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
                 <h2 class="text-3xl font-bold">Gaming during COVID-19</h2>
@@ -45,9 +47,11 @@
     </div>
     <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportAyden.html" class="no-underline flex flex-col max-h-full" target="_blank">
-            <div class="aspect-video bg-white flex flex-initial justify-center flex-col rounded-xl p-1 w-full h-auto">
-                <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Ayden.png"
-                     alt="Graph">
+            <div>
+                <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
+                    <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Ayden.png"
+                        alt="Graph">
+                </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
                 <h2 class="text-3xl font-bold">Indie Games: The Underdogs of Gaming</h2>
@@ -95,9 +99,11 @@
     </div>
     <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportChengIan.html" class="no-underline flex flex-col max-h-full" target="_blank">
-            <div class="aspect-video bg-white flex flex-initial justify-center flex-col rounded-xl p-1 w-full h-auto">
-                <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/ChengIan.png"
-                     alt="Graph">
+            <div>
+                <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
+                    <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/ChengIan.png"
+                        alt="Graph">
+                </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
                 <h2 class="text-3xl font-bold">Analysis of live streaming of games on Twitch and Youtube</h2>
@@ -119,9 +125,11 @@
     </div>
     <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportDrew.html" class="no-underline flex flex-col max-h-full" target="_blank">
-            <div class="aspect-video bg-white flex flex-initial justify-center flex-col rounded-xl p-1 w-full h-auto">
-                <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Drew.png"
-                     alt="Graph">
+            <div>
+                <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
+                    <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Drew.png"
+                        alt="Graph">
+                </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
                 <h2 class="text-3xl font-bold">Effects of Covid-19 on Amusement Parks</h2>
@@ -143,9 +151,11 @@
     </div>
     <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportEdwin.html" class="no-underline flex flex-col max-h-full" target="_blank">
-            <div class="aspect-video bg-white flex flex-initial justify-center flex-col rounded-xl p-1 w-full h-auto">
-                <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Edwin.png"
-                     alt="Graph">
+            <div>
+                <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
+                    <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Edwin.png"
+                        alt="Graph">
+                </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
                 <h2 class="text-3xl font-bold">The Trends of American Football</h2>
@@ -163,9 +173,11 @@
     </div>
     <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportEuLer.html" class="no-underline flex flex-col max-h-full" target="_blank">
-            <div class="aspect-video bg-white flex flex-initial justify-center flex-col rounded-xl p-1 w-full h-auto">
-                <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/EuLer.png"
-                     alt="Graph">
+            <div>
+                <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
+                    <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/EuLer.png"
+                        alt="Graph">
+                </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
                 <h2 class="text-3xl font-bold">The Rise (and Fall) of Wordle</h2>
@@ -191,9 +203,11 @@
     </div>
     <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportGreene.html" class="no-underline flex flex-col max-h-full" target="_blank">
-            <div class="aspect-video bg-white flex flex-initial justify-center flex-col rounded-xl p-1 w-full h-auto">
-                <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Greene.png"
-                     alt="Graph">
+            <div>
+                <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
+                    <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Greene.png"
+                        alt="Graph">
+                </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
                 <h2 class="text-3xl font-bold">Popularity of Tourism in Various Countries before the COVID-19
@@ -223,9 +237,11 @@
     </div>
     <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportHugo.html" class="no-underline flex flex-col max-h-full" target="_blank">
-            <div class="aspect-video bg-white flex flex-initial justify-center flex-col rounded-xl p-1 w-full h-auto">
-                <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Hugo.png"
-                     alt="Graph">
+            <div>
+                <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
+                    <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Hugo.png"
+                        alt="Graph">
+                </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
                 <h2 class="text-3xl font-bold">Scrabble</h2>
@@ -246,9 +262,11 @@
     </div>
     <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportKabir.html" class="no-underline flex flex-col max-h-full" target="_blank">
-            <div class="aspect-video bg-white flex flex-initial justify-center flex-col rounded-xl p-1 w-full h-auto">
-                <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Kabir.png"
-                     alt="Graph">
+            <div>
+                <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
+                    <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Kabir.png"
+                        alt="Graph">
+                </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
                 <h2 class="text-3xl font-bold">The evolution of Basketball and the NBA</h2>
@@ -272,9 +290,11 @@
     </div>
     <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportKaiWen.html" class="no-underline flex flex-col max-h-full" target="_blank">
-            <div class="aspect-video bg-white flex flex-initial justify-center flex-col rounded-xl p-1 w-full h-auto">
-                <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/KaiWen.png"
-                     alt="Graph">
+            <div>
+                <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
+                    <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/KaiWen.png"
+                        alt="Graph">
+                </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
                 <h2 class="text-3xl font-bold">What makes a movie successful?</h2>
@@ -298,9 +318,11 @@
     </div>
     <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportKane.html" class="no-underline flex flex-col max-h-full" target="_blank">
-            <div class="aspect-video bg-white flex flex-initial justify-center flex-col rounded-xl p-1 w-full h-auto">
-                <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Kane.png"
-                     alt="Graph">
+            <div>
+                <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
+                    <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Kane.png"
+                        alt="Graph">
+                </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
                 <h2 class="text-3xl font-bold">Fireworks</h2>
@@ -320,9 +342,11 @@
     </div>
     <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportKenneth.html" class="no-underline flex flex-col max-h-full" target="_blank">
-            <div class="aspect-video bg-white flex flex-initial justify-center flex-col rounded-xl p-1 w-full h-auto">
-                <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Kenneth.png"
-                     alt="Graph">
+            <div>
+                <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
+                    <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Kenneth.png"
+                        alt="Graph">
+                </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
                 <h2 class="text-3xl font-bold">Gambling: An Analysis of Gambling as Entertainment</h2>
@@ -368,9 +392,11 @@
     </div>
     <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportRyan.html" class="no-underline flex flex-col max-h-full" target="_blank">
-            <div class="aspect-video bg-white flex flex-initial justify-center flex-col rounded-xl p-1 w-full h-auto">
-                <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Ryan.png"
-                     alt="Graph">
+            <div>
+                <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
+                    <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Ryan.png"
+                        alt="Graph">
+                </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
                 <h2 class="text-3xl font-bold">Eve Online: The popularity of modules</h2>
@@ -395,9 +421,11 @@
     </div>
     <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportTyler.html" class="no-underline flex flex-col max-h-full" target="_blank">
-            <div class="aspect-video bg-white flex flex-initial justify-center flex-col rounded-xl p-1 w-full h-auto">
-                <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Tyler.png"
-                     alt="Graph">
+            <div>
+                <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
+                    <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Tyler.png"
+                        alt="Graph">
+                </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
                 <h2 class="text-3xl font-bold">Media Adaptations</h2>
@@ -418,9 +446,11 @@
     </div>
     <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportWeeChong.html" class="no-underline flex flex-col max-h-full" target="_blank">
-            <div class="aspect-video bg-white flex flex-initial justify-center flex-col rounded-xl p-1 w-full h-auto">
-                <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/WeeChong.png"
-                     alt="Graph">
+            <div>
+                <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
+                    <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/WeeChong.png"
+                        alt="Graph">
+                </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
                 <h2 class="text-3xl font-bold">Crosswords: Accessibility and Representation</h2>
@@ -444,9 +474,11 @@
     </div>
     <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportWenkai.html" class="no-underline flex flex-col max-h-full" target="_blank">
-            <div class="aspect-video bg-white flex flex-initial justify-center flex-col rounded-xl p-1 w-full h-auto">
-                <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Wenkai.png"
-                     alt="Graph">
+            <div>
+                <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
+                    <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Wenkai.png"
+                        alt="Graph">
+                </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
                 <h2 class="text-3xl font-bold">Analysis of Pop Music over the Years</h2>
@@ -468,9 +500,11 @@
     </div>
     <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportYuebin.html" class="no-underline flex flex-col max-h-full" target="_blank">
-            <div class="aspect-video bg-white flex flex-initial justify-center flex-col rounded-xl p-1 w-full h-auto">
-                <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Yuebin.png"
-                     alt="Graph">
+            <div>
+                <div class="aspect-video bg-white flex justify-center flex-col rounded-xl p-1 w-full h-auto">
+                    <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Yuebin.png"
+                        alt="Graph">
+                </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
                 <h2 class="text-3xl font-bold">Counter Strike: Global Offensive; Player Analysis</h2>
