lmao forgor mahir :skull:

--- a/index.html
+++ b/index.html
@@ -368,9 +368,11 @@
     </div>
     <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportMahir.html" class="no-underline flex flex-col max-h-full" target="_blank">
-            <div class="aspect-video bg-white flex flex-initial justify-center flex-col rounded-xl p-1 w-full h-auto">
-                <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Mahir.png"
-                     alt="Graph">
+            <div>
+                <div class="aspect-video bg-white flex flex-initial justify-center flex-col rounded-xl p-1 w-full h-auto">
+                    <img class="object-contain max-w-full max-h-full m-0 mb-1 rounded-t-xl" src="./imgs/Mahir.png"
+                        alt="Graph">
+                </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
                 <h2 class="text-3xl font-bold">Metacritic Games Analysis</h2>
