make mobile look nicer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <p class="text-l italic text-center">by M22404</p>
 <p class="text-l italic text-center">Completed in <strong>Sem 2, 2022</strong> :)</p>
 
-<div class="grid gap-7 m-5 p-5 grid-cols-3 items-start">
+<div class="grid gap-7 m-5 p-5 grid-cols-2 lg:grid-cols-3 items-start">
     <div class="drop-shadow-xl bg-gradient-to-br from-zinc-800 to-gray-800 hover:scale-105 rounded-xl transition-transform ease-in-out duration-500 card-height">
         <a href="reports/ProjectReportAlexis.html" class="no-underline flex flex-col max-h-full" target="_blank">
             <div>
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
-                <h2 class="text-2xl font-bold">Gaming during COVID-19</h2>
+                <h2 class="text-2xl lg:text-3xl font-bold">Gaming during COVID-19</h2>
                 <p class="text-zinc-200 pl-1.5">by <strong>Alexis</strong></p>
                 <div class="h-2 flex-none"></div>
                 <div class="overflow-y-scroll p-1.5">
@@ -54,7 +54,7 @@
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
-                <h2 class="text-2xl font-bold">Indie Games: The Underdogs of Gaming</h2>
+                <h2 class="text-2xl lg:text-3xl font-bold">Indie Games: The Underdogs of Gaming</h2>
                 <p class="text-zinc-200 pl-1.5">by <strong>Ayden</strong></p>
                 <div class="h-2 flex-none"></div>
                 <div class="overflow-y-scroll p-1.5">
@@ -106,7 +106,7 @@
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
-                <h2 class="text-2xl font-bold">Analysis of live streaming of games on Twitch and Youtube</h2>
+                <h2 class="text-2xl lg:text-3xl font-bold">Analysis of live streaming of games on Twitch and Youtube</h2>
                 <p class="text-zinc-200 pl-1.5">by <strong>Cheng Ian</strong></p>
                 <div class="h-2 flex-none"></div>
                 <div class="overflow-y-scroll p-1.5">
@@ -132,7 +132,7 @@
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
-                <h2 class="text-2xl font-bold">Effects of Covid-19 on Amusement Parks</h2>
+                <h2 class="text-2xl lg:text-3xl font-bold">Effects of Covid-19 on Amusement Parks</h2>
                 <p class="text-zinc-200 pl-1.5">by <strong>Drew</strong></p>
                 <div class="h-2 flex-none"></div>
                 <div class="overflow-y-scroll p-1.5">
@@ -158,7 +158,7 @@
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
-                <h2 class="text-2xl font-bold">The Trends of American Football</h2>
+                <h2 class="text-2xl lg:text-3xl font-bold">The Trends of American Football</h2>
                 <p class="text-zinc-200 pl-1.5">by <strong>Edwin</strong></p>
                 <div class="h-2 flex-none"></div>
                 <div class="overflow-y-scroll p-1.5">
@@ -180,7 +180,7 @@
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
-                <h2 class="text-2xl font-bold">The Rise (and Fall) of Wordle</h2>
+                <h2 class="text-2xl lg:text-3xl font-bold">The Rise (and Fall) of Wordle</h2>
                 <p class="text-zinc-200 pl-1.5">by <strong>Eu Ler</strong></p>
                 <div class="h-2 flex-none"></div>
                 <div class="overflow-y-scroll p-1.5">
@@ -210,7 +210,7 @@
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
-                <h2 class="text-2xl font-bold">Popularity of Tourism in Various Countries before the COVID-19
+                <h2 class="text-2xl lg:text-3xl font-bold">Popularity of Tourism in Various Countries before the COVID-19
                     Pandemic</h2>
                 <p class="text-zinc-200 pl-1.5">by <strong>Greene</strong></p>
                 <div class="h-2 flex-none"></div>
@@ -244,7 +244,7 @@
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
-                <h2 class="text-2xl font-bold">Scrabble</h2>
+                <h2 class="text-2xl lg:text-3xl font-bold">Scrabble</h2>
                 <p class="text-zinc-200 pl-1.5">by <strong>Hugo</strong></p>
                 <div class="h-2 flex-none"></div>
                 <div class="overflow-y-scroll p-1.5">
@@ -269,7 +269,7 @@
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
-                <h2 class="text-2xl font-bold">The evolution of Basketball and the NBA</h2>
+                <h2 class="text-2xl lg:text-3xl font-bold">The evolution of Basketball and the NBA</h2>
                 <p class="text-zinc-200 pl-1.5">by <strong>Kabir</strong></p>
                 <div class="h-2 flex-none"></div>
                 <div class="overflow-y-scroll p-1.5">
@@ -297,7 +297,7 @@
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
-                <h2 class="text-2xl font-bold">What makes a movie successful?</h2>
+                <h2 class="text-2xl lg:text-3xl font-bold">What makes a movie successful?</h2>
                 <p class="text-zinc-200 pl-1.5">by <strong>Kai Wen</strong></p>
                 <div class="h-2 flex-none"></div>
                 <div class="overflow-y-scroll p-1.5">
@@ -325,7 +325,7 @@
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
-                <h2 class="text-2xl font-bold">Fireworks</h2>
+                <h2 class="text-2xl lg:text-3xl font-bold">Fireworks</h2>
                 <p class="text-zinc-200 pl-1.5">by <strong>Kane</strong></p>
                 <div class="h-2 flex-none"></div>
                 <div class="overflow-y-scroll p-1.5">
@@ -349,7 +349,7 @@
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
-                <h2 class="text-2xl font-bold">Gambling: An Analysis of Gambling as Entertainment</h2>
+                <h2 class="text-2xl lg:text-3xl font-bold">Gambling: An Analysis of Gambling as Entertainment</h2>
                 <p class="text-zinc-200 pl-1.5">by <strong>Kenneth</strong></p>
                 <div class="h-2 flex-none"></div>
                 <div class="overflow-y-scroll p-1.5">
@@ -375,7 +375,7 @@
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
-                <h2 class="text-2xl font-bold">Metacritic Games Analysis</h2>
+                <h2 class="text-2xl lg:text-3xl font-bold">Metacritic Games Analysis</h2>
                 <p class="text-zinc-200 pl-1.5">by <strong>Mahir</strong></p>
                 <div class="h-2 flex-none"></div>
                 <div class="overflow-y-scroll p-1.5">
@@ -401,7 +401,7 @@
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
-                <h2 class="text-2xl font-bold">Eve Online: The popularity of modules</h2>
+                <h2 class="text-2xl lg:text-3xl font-bold">Eve Online: The popularity of modules</h2>
                 <p class="text-zinc-200 pl-1.5">by <strong>Ryan</strong></p>
                 <div class="h-2 flex-none"></div>
                 <div class="overflow-y-scroll p-1.5">
@@ -430,7 +430,7 @@
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
-                <h2 class="text-2xl font-bold">Media Adaptations</h2>
+                <h2 class="text-2xl lg:text-3xl font-bold">Media Adaptations</h2>
                 <p class="text-zinc-200 pl-1.5">by <strong>Tyler</strong></p>
                 <div class="h-2 flex-none"></div>
                 <div class="overflow-y-scroll p-1.5">
@@ -455,7 +455,7 @@
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
-                <h2 class="text-2xl font-bold">Crosswords: Accessibility and Representation</h2>
+                <h2 class="text-2xl lg:text-3xl font-bold">Crosswords: Accessibility and Representation</h2>
                 <p class="text-zinc-200 pl-1.5">by <strong>Wee Chong</strong></p>
                 <div class="h-2 flex-none"></div>
                 <div class="overflow-y-scroll p-1.5">
@@ -483,7 +483,7 @@
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
-                <h2 class="text-2xl font-bold">Analysis of Pop Music over the Years</h2>
+                <h2 class="text-2xl lg:text-3xl font-bold">Analysis of Pop Music over the Years</h2>
                 <p class="text-zinc-200 pl-1.5">by <strong>Wenkai</strong></p>
                 <div class="h-2 flex-none"></div>
                 <div class="overflow-y-scroll p-1.5">
@@ -509,7 +509,7 @@
                 </div>
             </div>
             <section class="p-5 min-h-0 flex flex-col">
-                <h2 class="text-2xl font-bold">Counter Strike: Global Offensive; Player Analysis</h2>
+                <h2 class="text-2xl lg:text-3xl font-bold">Counter Strike: Global Offensive; Player Analysis</h2>
                 <p class="text-zinc-200 pl-1.5">by <strong>Yuebin</strong></p>
                 <div class="h-2 flex-none"></div>
                 <div class="overflow-y-scroll p-1.5">
